# GoogleTestSample

./: CMakeLists.txt  build.sh
MyApp/: CMakeLists.txt
MyApp/include/: SampleFunction.h
MyApp/src/: SampleFunction.cpp  main.cpp
MyTest/: CMakeLists.txt
MyTest/include/: config.h.in
MyTest/src/: main.cpp
MyTest/test/: SampleTestCase.cpp
googletest/msvc/: UpgradeLog.XML  gtest.sln  gtest_prod_test.vcproj
googletest/msvc/gtest/Debug/: gtest_maind.lib
